package dominio.entidades;

public enum MedioDeTransporte {
    SUBTE, TREN
}
