@startuml
'https://plantuml.com/class-diagram

package Entidades #back:lightyellow;line:gold;line.bold{

    class RepoEntidades{
        instance: RepoEntidades
        serviciosDeTransporte: List<ServicioTransporte>
        organizaciones: List<Organizacion>

        getInstance(): RepoEntidades
        agregar(Organizacion):void
        obtenerOrgPorNombre(String):Organizacion
        agregar(ServicioDeTransporte):void
        obtenerEntidades():List<Entidad>
    }

    abstract class Entidad{
        nombre:String

        calcularPromedioTiempoCierre(): List<Duration>
        cantidadIncidentes(): Integer
    }

    class Organizacion{
        sucursales: List<Sucursal>

        getSucursales():List<Sucursal>
        setNombre(String):void
        compararPorPromedioTiempo(Organizacion):int
        calcularPromedioTiempoCierre():Duration
        cantidadIncidentes():Integer
    }

    class ServicioTransporte{
        tipoTransporte: MedioDeTransporte
        lineaDeTransporteIda: Linea
        lineaDeTransporteVuelta: Linea

        calcularPromedioTiempoCierre():Duration
        cantidadIncidentes():Integer
    }

    enum MedioDeTransporte{
        SUBTE,
        TREN
    }

    class Linea{
        nombre:String
        estacionOrigen:Estacion
        estacionDestino:Estacion
        estaciones:List<Estacion>
        localizacionesDeEstacion: List<Localizacion>

        getEstaciones():List<Estacion>
    }

    ServicioTransporte --> MedioDeTransporte
    ServicioTransporte --> Linea
    ServicioTransporte --> Linea
    Organizacion-right-|>Entidad
    ServicioTransporte-up-|>Entidad
    RepoEntidades --->"*" Organizacion
    RepoEntidades --->"*" ServicioTransporte
}

@enduml